ghost-deployment.yml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: ghost-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ghost
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1 
  template: 
    metadata: 
      labels:
        app: ghost
    spec: 
      containers:
      - name: ghost
        image: ghost:1.21.2-alpine
        ports:
        - containerPort: 2368
