mysql-deployment.yml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: mysql-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1 
  template: 
    metadata: 
      labels:
        app: mysql
    spec: 
      containers:
      - name: db
        image: mysql:5.7
        ports:
        - containerPort: 3306
