ghost-service.yml
apiVersion: v1
kind: Service
metadata:
  name: ghost-svc
  labels:
    app: ghost-svc
spec:
  type: NodePort
  ports:
  - port: 2368
    nodePort: 30001
    protocol: TCP
  selector:
    app: ghost
