ghost-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ghost-ingress
spec:
  backend:
    serviceName: ghost-svc
    servicePort: 2368
